--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,8 +7,8 @@
 
 - link:
     ~/.zshrc:
-    ~/.oh-my-zsh/: 
-        path: oh-my-zsh/*
+    ~/.oh-my-zsh/custom/:
+        path: oh-my-zsh/custom/*
         glob: true
     ~/.config/i3/config: i3/config
     ~/.config/dunst/dunstrc: dunst/dunstrc
