--- a/i3/config
+++ b/i3/config
@@ -26,6 +26,8 @@ font pango:monospace 8
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
+exec --no-startup-id /usr/lib/polkit-kde-authentication-agent-1
+
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
@@ -41,6 +43,7 @@ bindsym XF86AudioPlay exec playerctl play-pause
 # bindsym XF86AudioPause exec playerctl pause
 bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86AudioStop exec playerctl stop
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -55,7 +58,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec "rofi -show drun"
-bindsym $mod+c exec "rofi -show calc -modi calc -no-show-match -no-sort -calc-command 'echo -n '{result}' | clipster -c'"
+bindsym $mod+c exec "rofi -show calc -modi calc -no-show-match -no-sort -calc-command 'echo -n '{result}' | xclip -selection c'"
 # dmenu_run
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
@@ -157,6 +160,8 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
+bindsym $mod+o exec ~/dotfiles/scripts/lock/lock.sh
+exec_always --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer 900 '~/dotfiles/scripts/lock/lock.sh suspend'
 bindsym $mod+p exec ~/dotfiles/scripts/power.sh
 
 # resize window (you can also use the mouse for that)
@@ -197,16 +202,17 @@ bindsym $mod+y sticky toggle
 # This was given to me by Pasok, aka, Matilde. If something goes wrong, it's her fault.
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-exec_always picom -b --experimental-backends --backend glx
+exec_always --no-startup-id picom --experimental-backends --backend glx
 
-exec_always xrandr --output DisplayPort-1 --mode 1920x1080 --rate 144 --primary --output HDMI-A-0 --mode 1920x1080 --rate 60 --left-of DisplayPort-1
+exec_always --no-startup-id xrandr --output DisplayPort-1 --mode 1920x1080 --rate 144 --primary --output HDMI-A-0 --mode 1920x1080 --rate 60 --left-of DisplayPort-1
 
-exec_always dunst
-exec_always nitrogen --restore
+exec_always --no-startup-id dunst
+exec_always --no-startup-id nitrogen --restore
 exec_always --no-startup-id autotiling
 
-exec_always --no-startup-id clipster -d
-bindsym $mod+v exec clipster -s -c
+exec_always --no-startup-id copyq
+bindsym $mod+v exec copyq menu
+for_window [class="(?i)copyq"] floating enable
 
 bindsym $mod+period exec rofimoji
 
