--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,8 +7,8 @@
 
 - link:
     ~/.zshrc:
-    ~/.oh-my-zsh/custom/:
-        path: oh-my-zsh/custom/*
+    ~/.oh-my-zsh/custom/plugins/:
+        path: oh-my-zsh/custom/plugins/*
         glob: true
     ~/.config/i3/config: i3/config
     ~/.config/dunst/dunstrc: dunst/dunstrc
@@ -20,9 +20,10 @@
         glob: true
         path: polybar/*
     ~/.config/rofi/config.rasi: rofi/config.rasi
-    ~/.oh-my-zsh/custom/:
+    ~/.oh-my-zsh/custom/themes/:
             glob: true
-            path: oh-my-zsh/custom/*
+            path: oh-my-zsh/custom/themes/*
+    ~/.config/picom.conf: picom/picom.conf
 
 - create:
 
