--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,9 +7,11 @@
 
 - link:
     ~/.zshrc:
+        force: true
     ~/.oh-my-zsh/custom/plugins/:
         path: oh-my-zsh/custom/plugins/*
         glob: true
+        force: true
     ~/.config/i3/config: i3/config
     ~/.config/dunst/dunstrc: dunst/dunstrc
     ~/.config/kitty/:
