--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ font pango:monospace 8
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- dotfiles/scripts/lock/lock.sh --nofork
 
-exec --no-startup-id /usr/lib/polkit-kde-authentication-agent-1
+exec --no-startup-id /usr/lib/lxpolkit
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -205,13 +205,15 @@ bindsym $mod+y sticky toggle
 # This was given to me by Pasok, aka, Matilde. If something goes wrong, it's her fault.
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-exec_always --no-startup-id picom --experimental-backends --backend glx
+exec_always --no-startup-id picom -b --experimental-backends --backend glx
 
 exec_always --no-startup-id xrandr --output DisplayPort-1 --mode 1920x1080 --rate 144 --primary --output HDMI-A-0 --mode 1920x1080 --rate 60 --left-of DisplayPort-1
 
 exec_always --no-startup-id dunst
-exec_always --no-startup-id nitrogen --restore
+exec_always --no-startup-id feh --bg-fill --randomize ./Pictures/Wallpapers --randomize ./Pictures/Wallpapers
 exec_always --no-startup-id autotiling
+
+bindsym $mod+Shift+w exec feh --bg-fill --randomize ./Pictures/Wallpapers --randomize ./Pictures/Wallpapers
 
 exec_always --no-startup-id copyq
 bindsym $mod+v exec copyq menu
