--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -9,8 +9,12 @@ inactive-opacity-override = false;
 # inactive-dim-fixed = true;
 blur-background = true;
 blur-background-frame = true;
-blur-method = "dual_kawase";
-blur-strength = 4;
+
+blur-method = "box";
+blur-size = 10;
+
+# blur-method = "dual_kawase";
+# blur-strength = 4;
 blur-kern = "3x3box";
 # blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 # blur-background-fixed = true;
