--- a/polybar/config
+++ b/polybar/config
@@ -59,7 +59,7 @@ font-2 = FontAwesome5Free:style=Regular:size=10;4
 font-3 = FontAwesome5Brands:style=Regular:size=11;3
 font-4 = "Noto Serif:style=Bold:size=6;1"
 
-modules-left = powermenu i3 headphones network
+modules-left = powermenu i3 bspwm headphones network
 modules-center = date spotify
 modules-right = filesystem cpu memory volume battery pkg
 
@@ -134,6 +134,141 @@ label-urgent-padding = 1
 ; Separator in between workspaces
 ; label-separator = |
 
+
+[module/bspwm]
+type = internal/bspwm
+
+; Only show workspaces defined on the same output as the bar
+; NOTE: The bspwm and XRandR monitor names must match, which they do by default.
+; But if you rename your bspwm monitors with bspc -n this option will no longer
+; behave correctly.
+; Default: true
+; pin-workspaces = true
+
+; Output mode flags after focused state label
+; Default: false
+; inline-mode = false
+
+; Create click handler used to focus workspace
+; Default: true
+; enable-click = false
+
+; Create scroll handlers used to cycle workspaces
+; Default: true
+enable-scroll = false
+
+; Set the scroll cycle direction 
+; Default: true
+; reverse-scroll = false
+
+; Use fuzzy (partial) matching on labels when assigning 
+; icons to workspaces
+; Example: code;♚ will apply the icon to all workspaces 
+; containing 'code' in the label
+; Default: false
+; fuzzy-match = true
+
+; ws-icon-[0-9]+ = <label>;<icon>
+; Note that the <label> needs to correspond with the bspwm workspace name
+; Neither <label> nor <icon> can contain a semicolon (;)
+; ws-icon-0 = code;♚
+; ws-icon-1 = office;♛
+; ws-icon-2 = graphics;♜
+; ws-icon-3 = mail;♝
+; ws-icon-4 = web;♞
+; ws-icon-default = ♟
+; ws-icon-0 = 1;1
+; ws-icon-1 = 2;2
+; ws-icon-2 = 3;3
+; ws-icon-3 = 4;4 
+; ws-icon-4 = 5;5 
+; ws-icon-5 = 6;6 
+; ws-icon-6 = 7;7 
+; ws-icon-7 = 8;8 
+ws-icon-8 = 9;
+ws-icon-9 = 10;
+
+; Available tags:
+;   <label-monitor>
+;   <label-state> - gets replaced with <label-(focused|urgent|occupied|empty)>
+;   <label-mode> - gets replaced with <label-(monocle|tiled|fullscreen|floating|locked|sticky|private)>
+; Default: <label-state>
+; format = <label-state> <label-mode>
+
+; Available tokens:
+;   %name%
+; Default: %name%
+; label-monitor = %name%
+
+; If any values for label-dimmed-N are defined, the workspace/mode
+; colors will get overridden with those values if the monitor is out of focus
+; To only override workspaces in a specific state, use:
+;   label-dimmed-focused
+;   label-dimmed-occupied
+;   label-dimmed-urgent
+;   label-dimmed-empty
+; label-dimmed-foreground = #555
+; label-dimmed-underline = ${bar/top.background}
+; label-dimmed-focused-background = #f00
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+label-focused = %index%
+; label-focused-foreground = #ffffff
+; label-focused-background = #3f3f3f
+; label-focused-underline = #fba922
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+; label-occupied = %icon%
+; label-occupied-underline = #555555
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+; label-urgent = %icon%
+; label-urgent-foreground = #000000
+; label-urgent-background = #bd2c40
+; label-urgent-underline = #9b0a20
+
+; Available tokens:
+;   %name%
+;   %icon%
+;   %index%
+; Default: %icon%  %name%
+; label-empty = %icon%
+; label-empty-foreground = #55
+
+; The following labels will be used to indicate the layout/mode
+; for the focused workspace. Requires <label-mode>
+;
+; Available tokens:
+;   None
+;label-monocle = 
+;label-tiled = 
+;label-fullscreen = 
+;label-floating = 
+;label-pseudotiled = P
+;label-locked = 
+;label-locked-foreground = #bd2c40
+;label-sticky = 
+;label-sticky-foreground = #fba922
+;label-private = 
+;label-private-foreground = #bd2c40
+;label-marked = M
+
+; Separator in between workspaces
+; label-separator = |
+; label-separator-padding = 2
+; label-separator-foreground = #ffb52a
 
 [module/mpd]
 type = internal/mpd
@@ -410,7 +545,7 @@ type = internal/pulseaudio
 ;   <label-volume> (default)
 ;   <ramp-volume>
 ;   <bar-volume>
-format-volume = <label-volume> <bar-volume>
+format-volume = <label-volume>
 
 ; Available tokens:
 ;   %percentage% (default)
