--- a/polybar/config
+++ b/polybar/config
@@ -61,7 +61,7 @@ font-4 = "Noto Serif:style=Bold:size=6;1"
 
 modules-left = powermenu i3 headphones network
 modules-center = date spotify
-modules-right = filesystem cpu memory volume battery pkg
+modules-right = filesystem cpu memory volume battery xbacklight pkg
 
 tray-position = ${env:TRAY_POSITION:right}
 tray-padding = 3
@@ -152,8 +152,8 @@ type = internal/xbacklight
 card = intel_backlight
 enable-scroll = true	
 
-format = <label> <bar>
-label = BL
+format = <label>
+label =  %percentage%%
 
 bar-width = 10
 bar-indicator = |
