--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -25,7 +25,9 @@ blur-background-exclude = [
 ];
 
 opacity-rule = [ "80:class_g = 'Rofi'",
-		"100:class_g = 'vlc'"
+		"100:class_g = 'vlc'",
+		"100:class_g = 'Chromium'",
+		"100:class_g = 'firefox'"
 ];
 
 # Fading
