--- a/i3/config
+++ b/i3/config
@@ -26,7 +26,7 @@ font pango:monospace 8
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- dotfiles/scripts/lock/lock.sh --nofork
 
-exec --no-startup-id /usr/lib/lxpolkit
+exec --no-startup-id lxpolkit
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -56,10 +56,9 @@ bindsym $mod+Return exec kitty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
 bindsym $mod+d exec "rofi -show drun"
 bindsym $mod+c exec "rofi -show calc -modi calc -no-show-match -no-sort -calc-command 'echo -n '{result}' | xclip -selection c'"
-# dmenu_run
+bindsym $mod+Tab exec "rofi -show window"
 
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -202,12 +201,10 @@ bindsym $mod+y sticky toggle
 #         status_command i3status
 # }
 #
-# This was given to me by Pasok, aka, Matilde. If something goes wrong, it's her fault.
+
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
 exec_always --no-startup-id picom -b --experimental-backends --backend glx
-
-exec_always --no-startup-id xrandr --output DisplayPort-1 --mode 1920x1080 --rate 144 --primary --output HDMI-A-0 --mode 1920x1080 --rate 60 --left-of DisplayPort-1
 
 exec_always --no-startup-id dunst
 exec_always --no-startup-id feh --bg-fill --randomize ./Pictures/Wallpapers --randomize ./Pictures/Wallpapers
