updated rofi and polybar

--- a/polybar/themes/polybar-1/config.ini
+++ b/polybar/themes/polybar-1/config.ini
@@ -18,7 +18,9 @@ bg = #B6222d32
 fg = #FFFFFF
 fg-alt = #A9ABB0
 
-acolor = #5e35b1
+;acolor = #5e35b1
+acolor = #881798
+acolor-alt = #8b6cc9
 curgent = #e53935
 coccupied = #1e88e5
 
@@ -49,7 +51,7 @@ blue-gray = #546e7a
 [bar/main]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 45
+height = 40
 offset-x = 0%
 offset-y = 0%
 bottom = true
@@ -69,10 +71,11 @@ padding-right = 2
 
 ;==========================================================
 
-font-0 = "Fantasque Sans Mono:pixelsize=12;2"
-font-1 = "Material Icons Round:size=13;4"
-font-2 = "FontAwesome5Brands:style=Regular:size=13;3"
-font-3 = "FontAwesome5Free:style=Solid:size=12;2"
+font-0 = "Fantasque Sans Mono:pixelsize=13;3"
+font-1 = "Material Icons Round:size=14;5"
+font-2 = "FontAwesome5Brands:style=Regular:size=12;4"
+font-3 = "FontAwesome5Free:style=Solid:size=12;4"
+font-4 = "FontAwesome5Brands:style=Regular:size=15;4"
 
 ;==========================================================
 
@@ -103,8 +106,9 @@ type = custom/text
 content = 
 ;content = 
 ;alt-icon = 
+content-font = 5
 content-padding = 2
-content-background = ${color.acolor}
+;content-background = ${color.acolor}
 content-foreground = ${color.fg}
 click-left = $HOME/dotfiles/scripts/custom-rofi.sh
 click-right = $HOME/dotfiles/scripts/power.sh
@@ -145,12 +149,12 @@ label-unfocused-padding = 2
 label-urgent-padding = 2
 label-focused-padding = 2
 
-label-focused-foreground = ${color.acolor}
+label-focused-foreground = ${color.acolor-alt}
 label-urgent-foreground = ${color.curgent}
 label-unfocused-foreground = ${color.fg}
 label-visible-foreground = ${color.coccupied}
 
-label-focused-underline = ${color.acolor}
+label-focused-underline = ${color.acolor-alt}
 label-urgent-underline = ${color.curgent}
 label-visible-underline = ${color.coccupied}
 
@@ -319,8 +323,9 @@ interval = 1
 label =  %date% %time%
 time =  %H:%M
 time-alt =  %H:%M:%S
-date =  %Y-%m-%d
-date-alt =  %a, %d %b %Y
+; 
+date = %Y-%m-%d
+date-alt = %a, %d %b %Y
 
 [module/powermenu]
 type = custom/text
