--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -137,7 +137,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 opacity-rule = [ "80:class_g = 'Rofi'",
 		"100:class_g = 'vlc'",
 		"100:class_g = 'Chromium'",
-		"100:class_g = 'firefox'"
+		"100:class_g = 'firefox'",
+                "100:class_g = 'Microsoft-edge-dev'"
 ];
 
 
