Added audio sink switcher to polybar

--- a/polybar/themes/polybar-1/config.ini
+++ b/polybar/themes/polybar-1/config.ini
@@ -93,7 +93,7 @@ scroll-down = i3wm-wsprev
 
 modules-left = menu i3
 modules-center = spotify
-modules-right = mpd volume battery network date
+modules-right = headphones volume battery network date
 
 ;tray-position = ${env:TRAY_POSITION:right}
 ;tray-detached = true
@@ -250,6 +250,12 @@ exec = spotify-now -i "%title - %artist" -p "Paused" -e "Error 404"
 click-left = playerctl play-pause
 
 ;==========================================================
+
+[module/headphones]
+type = custom/script
+exec = echo 
+click-left = $HOME/dotfiles/scripts/switchsinks.sh
+interval = 3600
 
 [module/pkg]
 type = custom/script
