updated battery type

--- a/polybar/themes/polybar-1/config.ini
+++ b/polybar/themes/polybar-1/config.ini
@@ -268,8 +268,8 @@ tail = true
 type = internal/battery
 full-at = 99
 time-format = %H:%M
-battery = BAT1
-adapter = AC
+battery = BAT0
+adapter = ADP1
 format-charging = <animation-charging> <label-charging>
 ;label-charging = %percentage%% (%time%)
 label-charging = %percentage%%
